Daniel fixes menu on mobile cart page

--- a/frontend/css/cart-devices.css
+++ b/frontend/css/cart-devices.css
@@ -128,6 +128,7 @@ header {
   flex-flow: row-reverse;
   justify-content: end;
   align-items: center;
+  position: absolute;
   height: 8%;
   width: 100%;
   padding-right: 0.8rem;
@@ -226,8 +227,11 @@ header {
   justify-content: center;
   align-items: center;
 
+  position: relative;
+  top: 2rem;
+
   width: 100%;
-  height: 20vh;
+  height: 30vh;
   /* z-index: 10; */
 
   /* ~~~~ FOR DEBUGGING~~~~*/
